--- a/src/css/index.css
+++ b/src/css/index.css
@@ -39,14 +39,33 @@ h1, h2, h3, h4, p, li, a, input, button {
   align-items: center;
 }
 
+.w-40 {
+  width: 40%;
+}
+
 .w-20 {
   width: 20%;
+}
+
+.w-18 {
+  width: 18%;
 }
 
 .mr-35 {
   margin-right: 35px;
 }
 
+.gap-20 {
+  gap: 20px;
+}
+
+.ta-right {
+  text-align: right;
+}
+
+.ta-left {
+  text-align: left;
+}
 
 /*---------------------------------------------------------------*/
 /*    header                                                     */
@@ -54,12 +73,15 @@ h1, h2, h3, h4, p, li, a, input, button {
 
 header {
   padding-top: 60px;
-  height: 100px;
 }
 
 header p {
   font-size: 18px;
   font-weight: 500;
+}
+
+h1 {
+  font-size: 35px;
 }
 
 .divisor {
@@ -109,4 +131,85 @@ nav ul li, .lang-p {
 
 .lang-icon {
   font-size: 30px;
+}
+
+
+
+/*------------------------------------------------------------*/
+/*    footer                                                  */
+/*------------------------------------------------------------*/
+
+.footer-links {
+  background-color: #fffdd0;
+  padding-bottom: 20px;
+}
+
+.footer-divisor {
+  margin-bottom: 40px;
+  height: 4px;
+  background-color: #000;
+}
+
+.footer-email-input {
+  padding: 10px 0;
+  margin: 20px 0;
+  background-color: #fffdd0;
+  border-bottom: 2px solid #000;
+  width: 280px;
+  font-size: 18px;
+}
+
+button {
+  display: block;
+  width: 160px;
+  height: 45px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 15px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer-join {
+  margin-bottom: 20px;
+}
+
+footer h3 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+footer p {
+  font-size: 18px;
+}
+
+.footer-links ul li {
+  font-size: 18px;
+  padding: 10px 0;
+  cursor: pointer;
+}
+
+.footer-socials {
+  padding: 20px 0;
+  font-size: 25px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.footer-copyright {
+  height: 60px;
+  background-color: #000;
+}
+
+.footer-copyright ul li {
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.main-copyright {
+  width: 28%;
+  text-transform: uppercase;
+  text-align: left;
 }
