--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,15 @@
 .container {
-  width: min(100% - 30px, 1880px);
+  width: min(100% - 60px, 1880px);
   margin-inline: auto;
 }
 
 h1, h2, h3, h4, p, li, a, input, button {
   color: #000;
+}
+
+html {
+  scrollbar-gutter: stable;
+  overflow-x: hidden; 
 }
 
 /*-----------------------------------------------------------------*/
@@ -146,7 +151,7 @@ nav ul li, .lang-p {
 
 .hero-banner {
   width: 100svw;
-  height: calc(100svh);
+  height: 100svh;
   background: #000 url(../../public/herobanner-background.jpg) top / cover no-repeat;
 }
 
@@ -265,3 +270,19 @@ footer p {
   text-transform: uppercase;
   text-align: left;
 }
+
+/*------------------------------------------------------------*/
+/*    not found                                               */
+/*------------------------------------------------------------*/
+
+.not-found {
+  width: 100%;
+  height: 100svh;
+}
+
+.not-found h2 {
+  font-size: 32px;
+}
+
+
+
