--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,12 @@ h1, h2, h3, h4, p, li, a, input, button {
   color: #000;
 }
 
+html {
+  scrollbar-gutter: stable;
+  overflow-x: hidden; 
+}
+
+
 /*-----------------------------------------------------------------*/
 /*    utility classes                                              */
 /*-----------------------------------------------------------------*/
