--- a/src/css/index.css
+++ b/src/css/index.css
@@ -185,7 +185,45 @@ nav ul li, .lang-p {
   color: rgb(67, 39, 95);
 }
 
+/*------------------------------------------------------------*/
+/*    form                                                    */
+/*------------------------------------------------------------*/
 
+.sign-in {
+  padding: 50px 0;
+  height: 80svh;
+  text-align: center;
+}
+
+.sign-in h1 {
+  font-size: 50px;
+  padding-bottom: 30px;
+}
+
+.sign-in input {
+  display: block;
+  height: 70px;
+}
+
+.sign-in input[type=text] {
+  width: 700px;
+  padding: 0 14px;
+  font-size: 18px;
+  border: 1px solid rgb(0 0 0 / 0.1);
+}
+
+.sign-in input[type=submit] {
+  margin: 25px 0 50px;
+  width: 160px;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.sign-in p {
+  font-size: 20px;
+  padding-bottom: 30px;
+}
 
 /*------------------------------------------------------------*/
 /*    footer                                                  */
