--- a/src/css/index.css
+++ b/src/css/index.css
@@ -223,6 +223,7 @@ nav ul li, .lang-p {
 .sign-in p {
   font-size: 20px;
   padding-bottom: 30px;
+  cursor: pointer;
 }
 
 /*------------------------------------------------------------*/
