--- a/src/css/index.css
+++ b/src/css/index.css
@@ -338,12 +338,20 @@ footer p {
 
 .empty-cart {
   font-size: 20px;
+  text-align: center;
 }
 
 .summary {
   width: 320px;
   padding: 20px;
   background-color: rgb(221, 221, 221);
+  border-top: 2px dotted rgb(125, 125, 125);
+  border-bottom: 2px dotted rgb(125, 125, 125);
+}
+
+.summary h2 {
+  padding: 10px;
+  border-bottom: 1px solid #000;
 }
 
 .summary p {
@@ -352,7 +360,7 @@ footer p {
 }
 
 .summary button {
-  margin-top: 10px;
+  margin: 10px 0;
 }
 
 /*------------------------------------------------------------*/
