--- a/src/css/index.css
+++ b/src/css/index.css
@@ -377,4 +377,79 @@ footer p {
   text-decoration: none;
 }
 
+/*------------------------------------------------------------*/
+/*    items                                                   */
+/*------------------------------------------------------------*/
 
+.items-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 50px 0 100px 0;
+}
+
+.item {
+  padding: 10px;
+  text-align: left;
+  width: 255px;
+}
+
+.item:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+}
+
+.item-img {
+  margin-bottom: 20px;
+  height: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  
+
+  img {
+    object-fit: contain;
+    height: 300px;
+    width: 250px;
+  }
+}
+
+.description {
+  font-size: 18px;
+  color: rgb(82, 82, 82);
+  font-weight: 500;
+  margin-bottom: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+span {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+select {
+  margin-top: 4px;
+  position: absolute;
+  right: 30px;
+  width: 115px;
+  height: 35px;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #000;
+  background-color: #fff;
+  padding: 5px;
+}
+
+.title {
+  margin-top: 50px;
+  height: 45px;
+}
