--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 .container {
-  width: min(100% - 60px, 1880px);
+  width: min(100% - 40px, 1280px);
   margin-inline: auto;
 }
 
@@ -54,6 +54,10 @@ html {
   width: 40%;
 }
 
+.w-22 {
+  width: 22%;
+}
+
 .w-20 {
   width: 20%;
 }
@@ -84,7 +88,6 @@ html {
 
 header {
   padding-top: 60px;
-  height: 240px;
 }
 
 header p {
@@ -120,6 +123,10 @@ h1 {
   text-transform: uppercase;
   font-weight: 600;
   color: rgb(0 0 0 / 0.3);
+}
+
+header nav {
+  margin-bottom: 20px;
 }
 
 
@@ -211,12 +218,21 @@ nav ul li, .lang-p {
   height: 70px;
 }
 
-.sign-in input[type=text] {
+.sign-in input[type=email], .sign-in input[type=password] {
   width: 700px;
   padding: 0 14px;
   font-size: 18px;
+}
+
+.sign-in input[type=email] {
   border: 1px solid rgb(0 0 0 / 0.1);
 }
+
+.sign-in input[type=password] {
+  border: 1px solid rgb(0 0 0 / 0.1);
+  border-top: none;
+}
+
 
 .sign-in input[type=submit] {
   margin: 25px 0 50px;
@@ -224,6 +240,7 @@ nav ul li, .lang-p {
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
+  color: #fff;
 }
 
 .sign-in p {
@@ -237,7 +254,7 @@ nav ul li, .lang-p {
 /*------------------------------------------------------------*/
 
 .footer-links {
-  background-color: #fffdd0;
+  background-color: rgb(245 245 245);
   padding-bottom: 20px;
 }
 
@@ -250,19 +267,19 @@ nav ul li, .lang-p {
 .footer-email-input {
   padding: 10px 0;
   margin: 20px 0;
-  background-color: #fffdd0;
+  background-color: rgb(245 245 245);
   border-bottom: 2px solid #000;
-  width: 280px;
+  width: 360px;
   font-size: 18px;
 }
 
 button {
   display: block;
   width: 160px;
-  height: 45px;
+  height: 48px;
   background-color: #000;
   color: #fff;
-  border-radius: 15px;
+  border-radius: 8px;
   font-size: 18px;
   font-weight: 600;
 }
