--- a/src/css/index.css
+++ b/src/css/index.css
@@ -90,6 +90,10 @@ header {
   padding-top: 60px;
 }
 
+header h1 {
+  font-size: 35px;
+}
+
 header p {
   font-size: 18px;
   font-weight: 500;
@@ -116,8 +120,8 @@ h1 {
 }
 
 .header-icon {
-  font-size: 30px;
-  margin-right: 20px;
+  font-size: 35px;
+  margin-right: 15px;
 }
 
 .access-icon {
@@ -359,7 +363,7 @@ footer p {
 }
 
 .summary {
-  width: 320px;
+  width: 25%;
   padding: 20px;
   background-color: rgb(221, 221, 221);
   border-top: 2px dotted rgb(125, 125, 125);
