--- a/src/css/index.css
+++ b/src/css/index.css
@@ -349,6 +349,10 @@ footer p {
   margin-bottom: 60px;
 }
 
+.cart-list {
+  width: 65%;
+}
+
 .cart h1 {
   font-size: 30px;
 }
@@ -357,21 +361,41 @@ footer p {
   font-size: 20px;
 }
 
-.cart td {
-  vertical-align: top;
-  padding: 5px 0;
+.cart table, .cart th, .cart td {
+  border-collapse: collapse;
+  border-bottom: 1px solid #000;
 }
 
-table {
-  border-bottom: 3px solid #000;
+.cart th {
+  padding: 8px 8px;
+  text-align: left;
+}
+
+.cart td {
+  vertical-align: top;
+  padding: 12px 8px;
+  text-align: left;
 }
 
 .cart-img {
-  height: 100px;
+  width: 16%;
 }
 
 .cart-title {
-  width: 300px;
+  padding-left: 12px;
+  width: 50%;
+}
+
+.cart-amount {
+  width: 20%;
+}
+
+.cart-price {
+  width: 8%;
+}
+
+.cart-total {
+  width: 8%;
 }
 
 .empty-cart {
